Update JavaCalculator01.java
Removed reference to source-code and preview from the command line